--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="logo">
+        <img src="img/24-247033_icono-de-sushi.png" alt="Logo" />
+      </div>
+      <nav>
+        <ul class="main-nav">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="carta.html">Carta</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div>
+      <h1 class="titulo">Sobre nosotros</h1>
+    </div>
+    <div>
+      <p class="texto">
+        Somos una cadena de comida japonesa con muchos años de experiencia.
+        Nuestro resturante lleva decadas haciendo sushi y siendo un refente en
+        este ambito.El restaurante pone al servicio de sus clientes la
+        elaboración de su sushi con productos de primera calidad, de los platos
+        más selectos de la variada y exquisita cocina japonesa, así como una
+        suculenta y variada selección de menús.
+      </p>
+    </div>
+  </body>
 </html>
