--- a/Contacto.html
+++ b/Contacto.html
@@ -16,10 +16,7 @@
   <body>
     <header class="main-header">
       <div class="logo">
-        <img
-          src="img/24-247033_icono-de-sushi.png"
-          alt="Logo"
-        />
+        <img src="img/24-247033_icono-de-sushi.png" alt="Logo" />
       </div>
       <nav>
         <ul class="main-nav">
@@ -29,6 +26,18 @@
         </ul>
       </nav>
     </header>
-    <h1>Home</h1>
+    <div>
+      <h1 class="titulo">Contacto</h1>
+    </div>
+    <div class="datosContacto">
+      <h2>Dirección:</h2>
+      <h4>C/Me la invento nº356</h4>
+      <h2>Horario:</h2>
+      <h4>De lunes a sábado de 12:00-24:00h</h4>
+      <h2>Teléfono</h2>
+      <h4>935876987/698712539</h4>
+      <h2>Como llegar:</h2>
+      <img class="direccion" src="imgDireccion/descarga.png" alt="mapa" />
+    </div>
   </body>
 </html>
