Carta y contacto perfecionados

--- a/Carta.html
+++ b/Carta.html
@@ -29,7 +29,7 @@
     <div>
       <h1 class="titulo">Carta</h1>
     </div>
-    <div>
+    <div class="menu">
       <h2>Menú Básico</h2>
       <h4>
         4 makis de atún 4 makis de salmón 2 nigiri atún 2 nigiri de salmón y
@@ -38,19 +38,22 @@
       <h3>Precio: 18€</h3>
     </div>
 
-    <div>
+    <div class="menu">
       <h2>Menú intermedio</h2>
       <h4>
         4 makis de atún 4 makis de salmón 4 nigiri de atún 4 nigiri de salmón 4
         california-roll de salmón 1 inari de salmón 1 inari de atún y sashimi
       </h4>
+      <h3>Precio: 35€</h3>
     </div>
-    <div>
+    <div class="menu">
       <h2>Menú gourmet</h2>
       <h4>
         8 makis de atún 8 makis de salmón 6 nigiri de atún 4 nigiri de salmón 8
-        california-roll de salmón 2 inari de atún 2 inari de salmón poke de salmón y sashimi
+        california-roll de salmón 2 inari de atún 2 inari de salmón poke de
+        salmón y sashimi
       </h4>
+      <h3>Precio: 50€</h3>
     </div>
   </body>
 </html>
