--- a/Contacto.html
+++ b/Contacto.html
@@ -29,15 +29,17 @@
     <div>
       <h1 class="titulo">Contacto</h1>
     </div>
-    <div class="datosContacto">
-      <h2>Dirección:</h2>
-      <h4>C/Me la invento nº356</h4>
-      <h2>Horario:</h2>
-      <h4>De lunes a sábado de 12:00-24:00h</h4>
-      <h2>Teléfono</h2>
-      <h4>935876987/698712539</h4>
-      <h2>Como llegar:</h2>
-      <img class="direccion" src="imgDireccion/descarga.png" alt="mapa" />
+    <div class="contactoContainer">
+      <div class="datosContacto">
+        <h2>Dirección:</h2>
+        <h4>C/Me la invento nº356</h4>
+        <h2>Horario:</h2>
+        <h4>De lunes a sábado de 12:00-24:00h</h4>
+        <h2>Teléfono</h2>
+        <h4>935876987/698712539</h4>
+        <h2>Como llegar:</h2>
+        <img class="direccion" src="imgDireccion/descarga.png" alt="mapa" />
+      </div>
     </div>
   </body>
 </html>
