--- a/Contacto.html
+++ b/Contacto.html
@@ -16,7 +16,6 @@
   <body>
     <header class="main-header">
       <div class="logo">
-        <img src="img/24-247033_icono-de-sushi.png" alt="Logo" />
       </div>
       <nav>
         <ul class="main-nav">
@@ -26,8 +25,9 @@
         </ul>
       </nav>
     </header>
+    <div></div>
     <div>
-      <h1 class="titulo">Contacto</h1>
+      <h2 class="titulo">Contacto</h2>
     </div>
     <div class="contactoContainer">
       <div class="datosContacto">
